<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AffirMate</string>
    <string name="nav_header_subtitle">Become who you wanna be – today</string>
    <string name="nav_header_desc">Manage Your Affirmations</string>

    <string name="new_card_activity_title">Enter Your Affirmation</string>
    <string name="create_name_hint">e.g. "I am a capable UX-Designer"</string>
    <string name="save_affirmation">Save</string>
    <string name="cancel_affirmation">Cancel</string>
    <string name="delete_affirmation">Delete</string>
    <string name="app_name">AffirMate</string>
    <string name="app_bar_label">Your Affirmations</string>
    <string name="action_settings">Settings</string>
    <string name="first_affirmation">I am a capable UX-Designer</string>
    <string name="first_Remind_me">Remind me: Once a day</string>
    <string name="first_time">8:30 AM</string>
    <string name="Disable_Button_Name">Disable</string>
    <string name="Edit_Button_Name">Edit</string>
    <string name="fab_label">CREATE</string>
    <string name="first_reminder_time">6:30AM</string>

    <string name="yes_delete_card">Delete</string>
    <string name="no_keep_card">Cancel</string>
    <string name="delete_card_dialog">Do you want to delete this affirmation?</string>

    <string name="channel_name">All Affirmations</string>
    <string name="channel_description">All AffirMate Affirmations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
