<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
        taken from under "android:layout_marginTop="60dp""

       app:cardElevation="4dp"
       app:cardUseCompatPadding="true"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
    -->
    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/outerLinearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewMakeBold"
                android:layout_width="match_parent"
                android:layout_height="336dp"
                android:paddingStart="8dp"
                android:text="@string/first_affirmation"
                android:textColor="@color/color70black"
                android:textSize="64sp" />

            <View
                android:id="@+id/dividerView"
                style="@style/Divider"
                android:visibility="visible" />

            <TextView
                android:id="@+id/firstRemindMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/first_Remind_me"
                android:textColor="@color/color70black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/firstTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/first_time"
                android:textColor="@color/color70black"
                android:textSize="14dp" />

            <LinearLayout
                android:id="@+id/innerLinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp">

                <Button
                    android:id="@+id/disableButtonPressed"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/Disable_Button_Name"
                    android:textColor="@color/color70black"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/editButtonPressed"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/transparent_bg_bordered_button"
                    android:text="@string/Edit_Button_Name"
                    android:textColor="@color/color70black"
                    android:visibility="visible" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>