<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <!--Test-->
    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="329dp"
        android:layout_height="442dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextView"
                android:layout_width="match_parent"
                android:layout_height="336dp"
                android:paddingStart="8dp"
                android:text="@string/first_affirmation"
                android:textColor="@color/color70black"
                android:textSize="64sp" />

            <View
                style="@style/Divider"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/first_Remind_me"
                android:textColor="@color/color70black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/first_time"
                android:textColor="@color/color70black"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp">

                <Button
                    android:id="@+id/disableButtonPressed"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/Disable_Button_Name"
                    android:textColor="@color/color70black"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/editButtonPressed"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/transparent_bg_bordered_button"
                    android:text="@string/Edit_Button_Name"
                    android:textColor="@color/color70black"
                    android:visibility="visible" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>


    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>